--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=civic_govt
 spring.datasource.url=jdbc:postgresql://localhost:5432/civic_govt
 spring.datasource.username=postgres
 spring.datasource.password=SasiEver@0801
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
@@ -13,6 +13,9 @@ spring.config.import=optional:file:.env[.properties]
 # File upload settings
 spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
+
+image.base.url=http://localhost:8080/images/
+project.image=images/
 
 frontend.url=http://localhost:3000
 
