--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=SasiEver@0801
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 spring.config.import=optional:file:.env[.properties]
 
 # File upload settings
@@ -18,16 +18,6 @@ image.base.url=http://localhost:8080/images/
 project.image=images/
 
 frontend.url=http://localhost:3000
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=jagdishswara@gmail.com
-spring.mail.password=ezgw upuc fcru svxg
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-
 
 spring.app.jwtSecret=secretafjkdauiuuqweqweqsfadafadafafadsafadafa
 spring.app.jwtExpirationMs=86400000
