--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=civic_govt
 spring.datasource.url=jdbc:postgresql://localhost:5432/civic_govt
 spring.datasource.username=postgres
 spring.datasource.password=SasiEver@0801
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.show_sql=true
@@ -26,4 +26,4 @@ spring.secure.app.jwtCookieName=jwt
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.example.secureshare=DEBUG
+logging.level.org.example.civic_govt=DEBUG
