--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=civic_govt
 
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/civic_govt
-spring.datasource.username=postgres
-spring.datasource.password=SasiEver@0801
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
